--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,5 @@
 {
-  "TITLE": "Sequence Music",
+  "TITLE_PAGE": "Sequence Music",
   "HOME": {
     "WELCOME": "Bienvenido a Nuestra Página de Inicio",
     "DESCRIPTION": "Esta es una descripción en Español"
@@ -9,48 +9,226 @@
     "ABOUT": "Acerca de",
     "CONTACT": "Contacto"
   },
-  "SONGS": {
-    "ADD_SONG": "Añadir Canción",
-    "SONG_LIST": "Lista de Canciones",
-    "GENRES": {
-      "Pop": "Pop",
-      "Rock": "Rock",
-      "Jazz": "Jazz",
-      "Blues": "Blues",
-      "Country": "Country",
-      "Folk": "Folk",
-      "Reggae": "Reggae",
-      "Hip Hop": "Hip Hop",
-      "R&B": "R&B",
-      "Electronic": "Electrónica",
-      "Classical": "Clásica",
-      "Metal": "Metal",
-      "Punk": "Punk",
-      "Soul": "Soul",
-      "Disco": "Disco",
-      "Funk": "Funk",
-      "Gospel": "Gospel",
-      "Techno": "Techno",
-      "House": "House",
-      "Trance": "Trance",
-      "Drum and Bass": "Drum and Bass",
-      "Dubstep": "Dubstep",
-      "Ambient": "Ambient",
-      "Latin": "Latino",
-      "Reggaeton": "Reggaeton",
-      "Ska": "Ska",
-      "Swing": "Swing",
-      "Bluegrass": "Bluegrass",
-      "Opera": "Ópera",
-      "Indie": "Indie",
-      "New Wave": "New Wave",
-      "Grunge": "Grunge",
-      "Alternative": "Alternativa",
-      "Psychedelic": "Psicodélica",
-      "World": "Música del mundo",
-      "Dance": "Dance",
-      "Hardcore": "Hardcore",
-      "Progressive": "Progresiva"
-    }
+  "ADD_NEW_SONG": "Añadir nueva canción",
+  "EDITING_SONG": "Editando canción",
+  "CANCEL": "Cancelar",
+  "TITLE": "Título",
+  "ARTIST": "Artistas",
+  "GENRE": "Género",
+  "RECORD_LABEL": "Compañía Discográfica",
+  "COUNTRY": "País",
+  "YEAR": "Año",
+  "RATING": "Puntuación",
+  "SAVE": "Guardar",
+  "ENTER_SONG_TITLE": "Indique el título de la canción",
+  "ENTER_YEAR": "Indique el año",
+  "ENTER_RATING": "Indique la puntuación",
+  "ADD_GENRE": "Añade un género",
+  "ADD_SONG": "Añadir canción",
+  "IMAGE_URL": "Link de la imágen",
+  "ENTER_IMAGE_URL": "Introduce el link de la imagen.",
+  "SELECT_ARTIST": "Indique el o los artistas",
+  "SELECT_COMPANY": "Seleccione una compañía",
+  "ARTIST_REQUIRED": "El artista es obligatorio",
+  "COMPANY_REQUIRED": "La compañía es requerida",
+  "SELECT_GENRE": "Seleccione generos musicales",
+  "SELECT_COUNTRY": "Seleccione un país",
+  "SELECTED_ARTISTS": "Artistas seleccionados",
+  "SELECTED_COMPANIES": "Compañías seleccionadas",
+  "SELECTED_GENRES": "Géneros seleccionados",
+  "COUNTRIES": {
+    "Afganistán": "Afganistán",
+    "Albania": "Albania",
+    "Alemania": "Alemania",
+    "Andorra": "Andorra",
+    "Angola": "Angola",
+    "Antigua y Barbuda": "Antigua y Barbuda",
+    "Arabia Saudita": "Arabia Saudita",
+    "Argelia": "Argelia",
+    "Argentina": "Argentina",
+    "Armenia": "Armenia",
+    "Australia": "Australia",
+    "Austria": "Austria",
+    "Azerbaiyán": "Azerbaiyán",
+    "Bahamas": "Bahamas",
+    "Bangladés": "Bangladés",
+    "Barbados": "Barbados",
+    "Baréin": "Baréin",
+    "Bélgica": "Bélgica",
+    "Belice": "Belice",
+    "Benín": "Benín",
+    "Bielorrusia": "Bielorrusia",
+    "Birmania": "Birmania",
+    "Bolivia": "Bolivia",
+    "Bosnia y Herzegovina": "Bosnia y Herzegovina",
+    "Botsuana": "Botsuana",
+    "Brasil": "Brasil",
+    "Brunéi": "Brunéi",
+    "Bulgaria": "Bulgaria",
+    "Burkina Faso": "Burkina Faso",
+    "Burundi": "Burundi",
+    "Bután": "Bután",
+    "Cabo Verde": "Cabo Verde",
+    "Camboya": "Camboya",
+    "Camerún": "Camerún",
+    "Canadá": "Canadá",
+    "Catar": "Catar",
+    "Chad": "Chad",
+    "Chile": "Chile",
+    "China": "China",
+    "Chipre": "Chipre",
+    "Ciudad del Vaticano": "Ciudad del Vaticano",
+    "Colombia": "Colombia",
+    "Comoras": "Comoras",
+    "Corea del Norte": "Corea del Norte",
+    "Corea del Sur": "Corea del Sur",
+    "Costa de Marfil": "Costa de Marfil",
+    "Costa Rica": "Costa Rica",
+    "Croacia": "Croacia",
+    "Cuba": "Cuba",
+    "Dinamarca": "Dinamarca",
+    "Dominica": "Dominica",
+    "Ecuador": "Ecuador",
+    "Egipto": "Egipto",
+    "El Salvador": "El Salvador",
+    "Emiratos Árabes Unidos": "Emiratos Árabes Unidos",
+    "Eritrea": "Eritrea",
+    "Eslovaquia": "Eslovaquia",
+    "Eslovenia": "Eslovenia",
+    "España": "España",
+    "Estados Unidos": "Estados Unidos",
+    "Estonia": "Estonia",
+    "Etiopía": "Etiopía",
+    "Filipinas": "Filipinas",
+    "Finlandia": "Finlandia",
+    "Fiyi": "Fiyi",
+    "Francia": "Francia",
+    "Gabón": "Gabón",
+    "Gambia": "Gambia",
+    "Georgia": "Georgia",
+    "Ghana": "Ghana",
+    "Granada": "Granada",
+    "Grecia": "Grecia",
+    "Guatemala": "Guatemala",
+    "Guyana": "Guyana",
+    "Guinea": "Guinea",
+    "Guinea-Bisáu": "Guinea-Bisáu",
+    "Guinea Ecuatorial": "Guinea Ecuatorial",
+    "Haití": "Haití",
+    "Honduras": "Honduras",
+    "Hungría": "Hungría",
+    "India": "India",
+    "Indonesia": "Indonesia",
+    "Irak": "Irak",
+    "Irán": "Irán",
+    "Irlanda": "Irlanda",
+    "Islandia": "Islandia",
+    "Islas Marshall": "Islas Marshall",
+    "Islas Salomón": "Islas Salomón",
+    "Israel": "Israel",
+    "Italia": "Italia",
+    "Jamaica": "Jamaica",
+    "Japón": "Japón",
+    "Jordania": "Jordania",
+    "Kazajistán": "Kazajistán",
+    "Kenia": "Kenia",
+    "Kirguistán": "Kirguistán",
+    "Kiribati": "Kiribati",
+    "Kuwait": "Kuwait",
+    "Laos": "Laos",
+    "Lesoto": "Lesoto",
+    "Letonia": "Letonia",
+    "Líbano": "Líbano",
+    "Liberia": "Liberia",
+    "Libia": "Libia",
+    "Liechtenstein": "Liechtenstein",
+    "Lituania": "Lituania",
+    "Luxemburgo": "Luxemburgo",
+    "Madagascar": "Madagascar",
+    "Malasia": "Malasia",
+    "Malaui": "Malaui",
+    "Maldivas": "Maldivas",
+    "Malí": "Malí",
+    "Malta": "Malta",
+    "Marruecos": "Marruecos",
+    "Mauricio": "Mauricio",
+    "Mauritania": "Mauritania",
+    "México": "México",
+    "Micronesia": "Micronesia",
+    "Moldavia": "Moldavia",
+    "Mónaco": "Mónaco",
+    "Mongolia": "Mongolia",
+    "Montenegro": "Montenegro",
+    "Mozambique": "Mozambique",
+    "Namibia": "Namibia",
+    "Nauru": "Nauru",
+    "Nepal": "Nepal",
+    "Nicaragua": "Nicaragua",
+    "Níger": "Níger",
+    "Nigeria": "Nigeria",
+    "Noruega": "Noruega",
+    "Nueva Zelanda": "Nueva Zelanda",
+    "Omán": "Omán",
+    "Países Bajos": "Países Bajos",
+    "Pakistán": "Pakistán",
+    "Palaos": "Palaos",
+    "Panamá": "Panamá",
+    "Papúa Nueva Guinea": "Papúa Nueva Guinea",
+    "Paraguay": "Paraguay",
+    "Perú": "Perú",
+    "Polonia": "Polonia",
+    "Portugal": "Portugal",
+    "Reino Unido": "Reino Unido",
+    "República Centroafricana": "República Centroafricana",
+    "República Checa": "República Checa",
+    "República del Congo": "República del Congo",
+    "República Democrática del Congo": "República Democrática del Congo",
+    "República Dominicana": "República Dominicana",
+    "Ruanda": "Ruanda",
+    "Rumanía": "Rumanía",
+    "Rusia": "Rusia",
+    "Samoa": "Samoa",
+    "San Cristóbal y Nieves": "San Cristóbal y Nieves",
+    "San Marino": "San Marino",
+    "San Vicente y las Granadinas": "San Vicente y las Granadinas",
+    "Santa Lucía": "Santa Lucía",
+    "Santo Tomé y Príncipe": "Santo Tomé y Príncipe",
+    "Senegal": "Senegal",
+    "Serbia": "Serbia",
+    "Seychelles": "Seychelles",
+    "Sierra Leona": "Sierra Leona",
+    "Singapur": "Singapur",
+    "Siria": "Siria",
+    "Somalia": "Somalia",
+    "Sri Lanka": "Sri Lanka",
+    "Suazilandia": "Suazilandia",
+    "Sudáfrica": "Sudáfrica",
+    "Sudán": "Sudán",
+    "Sudán del Sur": "Sudán del Sur",
+    "Suecia": "Suecia",
+    "Suiza": "Suiza",
+    "Surinam": "Surinam",
+    "Tailandia": "Tailandia",
+    "Tanzania": "Tanzania",
+    "Tayikistán": "Tayikistán",
+    "Timor Oriental": "Timor Oriental",
+    "Togo": "Togo",
+    "Tonga": "Tonga",
+    "Trinidad y Tobago": "Trinidad y Tobago",
+    "Túnez": "Túnez",
+    "Turkmenistán": "Turkmenistán",
+    "Turquía": "Turquía",
+    "Tuvalu": "Tuvalu",
+    "Ucrania": "Ucrania",
+    "Uganda": "Uganda",
+    "Uruguay": "Uruguay",
+    "Uzbekistán": "Uzbekistán",
+    "Vanuatu": "Vanuatu",
+    "Venezuela": "Venezuela",
+    "Vietnam": "Vietnam",
+    "Yemen": "Yemen",
+    "Yibuti": "Yibuti",
+    "Zambia": "Zambia",
+    "Zimbabue": "Zimbabue"
   }
 }
