feat: Added actions, effects, selectors, and UI component for modal functionality in Angular app.
Configure service loader for set on the store and add option delete modal (finish the configuration)

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -26,7 +26,7 @@
   "ADD_GENRE": "Añade un género",
   "ADD_SONG": "Añadir canción",
   "IMAGE_URL": "Link de la imágen",
-  "ENTER_IMAGE_URL": "Introduce el link de la imagen.",
+  "ENTER_IMAGE_URL": "Introduce el link de la imagen",
   "SELECT_ARTIST": "Indique el o los artistas",
   "SELECT_COMPANY": "Seleccione una compañía",
   "ARTIST_REQUIRED": "El artista es obligatorio",
