finish: optimizar y finalizar formulario de canción (no more-time)
- Implementación del campo de selección de país con datos de 'environment.countries', incluyendo la lógica de desplegable y selección.
- Ajustes en validaciones del formulario para garantizar que todos los campos requeridos sean validados adecuadamente.
- Refinamiento de la lógica de 'onSubmit' para manejar correctamente tanto la adición de nuevas canciones como la edición de canciones existentes.
- Corrección del estilo y comportamiento del botón de envío, asegurándose de que se active sólo cuando el formulario es válido.
- Inclusión de lógica adicional para el manejo de artistas y géneros seleccionados, garantizando su correcta sincronización con el formulario.
- Mejoras generales en la estructura y la claridad del código, siguiendo las mejores prácticas de Angular y TypeScript.

Estos cambios representan una mejora significativa en la funcionalidad del formulario de canciones, proporcionando una interfaz de usuario más intuitiva y una lógica de formulario más robusta.

Próximos pasos:
- Realizar pruebas exhaustivas para asegurarse de que todas las funciones del formulario funcionan según lo esperado.
- Considerar la implementación de tests unitarios para validar la lógica del formulario.
- Revisar la accesibilidad y la respuesta del formulario en diferentes dispositivos para garantizar una experiencia de usuario uniforme.
- Documentar los cambios y actualizar cualquier documentación relevante del proyecto.

PD: Gracias por darme la oportunidad, con el tiempo que he tenido he cumplido con mis objetivos previstos (pero sé que no con el cliente). Seguiré codificando sobre main hasta terminar todo.

At. Daniel.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,17 +1,15 @@
 {
   "TITLE_PAGE": "Sequence Music",
-  "HOME": {
-    "WELCOME": "Bienvenido a Nuestra Página de Inicio",
-    "DESCRIPTION": "Esta es una descripción en Español"
-  },
-  "NAVIGATION": {
-    "HOME": "Inicio",
-    "ABOUT": "Acerca de",
-    "CONTACT": "Contacto"
-  },
+  "COMING_SOON": "¡Muy pronto!",
+  "TITLE_SONGS": "Canciones",
+  "ADD_BUTTON": "Añadir canción",
   "ADD_NEW_SONG": "Añadir nueva canción",
   "EDITING_SONG": "Editando canción",
+  "SEARCH_PLACEHOLDER": "Buscar una canción...",
+  "NO_MATCHES_FOUND": "No se encontró ninguna coincidencia.",
   "CANCEL": "Cancelar",
+  "ADD_DURATION": "Indique la duración",
+  "DURATION": "Duración",
   "TITLE": "Título",
   "ARTIST": "Artistas",
   "GENRE": "Género",
