Feature: Precargar artistas y géneros en el formulario de edición de canciones
- Ajuste para precargar los artistas y géneros seleccionados en el formulario de edición de canciones.
- Modificación en la plantilla HTML para mostrar adecuadamente los artistas y géneros precargados.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -22,6 +22,8 @@
   "ENTER_YEAR": "Indique el año",
   "ENTER_RATING": "Indique la puntuación",
   "ADD_GENRE": "Añade un género",
+  "EDIT_BUTTON": "Editar canción",
+  "DELETE_BUTTON": "Eliminar canción",
   "ADD_SONG": "Añadir canción",
   "IMAGE_URL": "Link de la imágen",
   "ENTER_IMAGE_URL": "Introduce el link de la imagen",
@@ -34,6 +36,12 @@
   "SELECTED_ARTISTS": "Artistas seleccionados",
   "SELECTED_COMPANIES": "Compañías seleccionadas",
   "SELECTED_GENRES": "Géneros seleccionados",
+  "SONG_DETAILS": "Detalles de la Canción",
+  "BACK_BUTTON": "Volver",
+  "SECONDS": "segundos",
+  "GENRES": "Géneros:",
+  "EDIT": "Editar",
+  "DELETE": "Eliminar",
   "COUNTRIES": {
     "Afganistán": "Afganistán",
     "Albania": "Albania",
