Refactorización y mejoras de estilos en la página de detalles de canciones
- Se modificó la estructura y el estilo de la tarjeta de detalles de la canción para una mejor visualización en dispositivos de diferentes tamaños.
- Se ajustó el tamaño de la imagen en la tarjeta para que sea más proporcional y menos dominante en la vista general.
- Se añadieron botones flotantes circulares para las acciones de editar y eliminar en dispositivos móviles y tabletas, mientras se mantuvo el estilo original en escritorio.
- Se implementó un botón de volver flotante en la parte inferior izquierda para móviles y tabletas, con un ícono de flecha hacia la izquierda.
- Se ajustó la responsividad de los textos para que se adapten de forma óptima a los diferentes tamaños de pantalla, aumentando el tamaño en escritorios y disminuyéndolo en dispositivos móviles y tabletas.
- Se mejoró la visibilidad y la estética de la página para mejorar la experiencia del usuario en diferentes dispositivos.

Estos cambios proporcionan una interfaz más intuitiva y accesible, mejorando la usabilidad general de la página de detalles de canciones en la aplicación.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,47 +1,48 @@
 {
-  "TITLE_PAGE": "Sequence Music",
-  "COMING_SOON": "¡Muy pronto!",
-  "TITLE_SONGS": "Canciones",
   "ADD_BUTTON": "Añadir canción",
-  "ADD_NEW_SONG": "Añadir nueva canción",
-  "EDITING_SONG": "Editando canción",
-  "SEARCH_PLACEHOLDER": "Buscar una canción...",
-  "NO_MATCHES_FOUND": "No se encontró ninguna coincidencia.",
-  "CANCEL": "Cancelar",
   "ADD_DURATION": "Indique la duración",
-  "DURATION": "Duración",
-  "TITLE": "Título",
+  "ADD_GENRE": "Añade un género",
+  "ADD_NEW_SONG": "Añadiendo una nueva canción",
+  "ADD_SONG": "Añadir canción",
+  "ARTIST_REQUIRED": "El artista es obligatorio",
   "ARTIST": "Artistas",
-  "GENRE": "Género",
-  "RECORD_LABEL": "Compañía Discográfica",
+  "BACK_BUTTON": "Volver",
+  "CANCEL": "Cancelar",
+  "COMING_SOON": "¡Muy pronto!",
+  "COMPANY_REQUIRED": "La compañía es requerida",
   "COUNTRY": "País",
-  "YEAR": "Año",
-  "RATING": "Puntuación",
-  "SAVE": "Guardar",
+  "DELETE_BUTTON": "Eliminar canción",
+  "DELETE": "Eliminar",
+  "DURATION": "Duración",
+  "EDIT_BUTTON": "Editar canción",
+  "EDIT": "Editar",
+  "EDITING_SONG": "Editando canción",
+  "ENTER_IMAGE_URL": "Introduce el link de la imagen",
+  "ENTER_RATING": "Indique la puntuación",
   "ENTER_SONG_TITLE": "Indique el título de la canción",
   "ENTER_YEAR": "Indique el año",
-  "ENTER_RATING": "Indique la puntuación",
-  "ADD_GENRE": "Añade un género",
-  "EDIT_BUTTON": "Editar canción",
-  "DELETE_BUTTON": "Eliminar canción",
-  "ADD_SONG": "Añadir canción",
+  "GENRE": "Género",
+  "GENRES": "Géneros:",
   "IMAGE_URL": "Link de la imágen",
-  "ENTER_IMAGE_URL": "Introduce el link de la imagen",
+  "NO_MATCHES_FOUND": "No se encontró ninguna coincidencia.",
+  "RATING": "Puntuación",
+  "RECORD_LABEL": "Compañía Discográfica",
+  "SAVE": "Guardar",
+  "SEARCH_PLACEHOLDER": "Buscar una canción...",
+  "SECONDS": "segundos",
   "SELECT_ARTIST": "Indique el o los artistas",
   "SELECT_COMPANY": "Seleccione una compañía",
-  "ARTIST_REQUIRED": "El artista es obligatorio",
-  "COMPANY_REQUIRED": "La compañía es requerida",
-  "SELECT_GENRE": "Seleccione generos musicales",
   "SELECT_COUNTRY": "Seleccione un país",
+  "SELECT_GENRE": "Seleccione generos musicales",
   "SELECTED_ARTISTS": "Artistas seleccionados",
   "SELECTED_COMPANIES": "Compañías seleccionadas",
   "SELECTED_GENRES": "Géneros seleccionados",
   "SONG_DETAILS": "Detalles de la Canción",
-  "BACK_BUTTON": "Volver",
-  "SECONDS": "segundos",
-  "GENRES": "Géneros:",
-  "EDIT": "Editar",
-  "DELETE": "Eliminar",
+  "UPDATE_SONG": "Actualizar canción",
+  "TITLE_PAGE": "Sequence Music",
+  "TITLE_SONGS": "Canciones",
+  "TITLE": "Título",
+  "YEAR": "Año",
   "COUNTRIES": {
     "Afganistán": "Afganistán",
     "Albania": "Albania",
