refactor: Amplia reestructuración de stores y formularios para soporte multiartista
- Modifica el modelo de datos de las canciones para admitir varios artistas, permitiendo una selección más flexible y acorde a las necesidades actuales.
- Actualiza el formulario de canciones en el frontend para permitir la selección de múltiples artistas mediante un desplegable dinámico y amigable con el usuario.
- Implementa lógica en el backend para manejar adecuadamente un array de IDs de artistas, asegurando una correcta sincronización y almacenamiento de los datos.
- Ajusta las llamadas API y el manejo de datos en el frontend para asegurar una comunicación efectiva y coherente con los cambios implementados en el backend.
- Añade un campo opcional para la URL de imagen en el formulario de canciones, proporcionando una imagen predeterminada en caso de no suministrar una, para mejorar la experiencia visual del usuario.
- Implementa lógica en el frontend para cerrar automáticamente el desplegable de géneros al seleccionar uno, mejorando la usabilidad y eficiencia en la selección.
- Asegura que todos los campos del formulario sean obligatorios para activar el botón de envío, garantizando la completitud y validez de la información proporcionada.
- Refactoriza y mejora el diseño de selección de géneros y compañías, logrando un interfaz más intuitivo, atractivo y en línea con los estándares de diseño modernos.
- Realiza pruebas exhaustivas en diferentes escenarios y dispositivos para garantizar la funcionalidad, compatibilidad y estabilidad de los cambios implementados, asegurando una experiencia de usuario óptima.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -43,6 +43,26 @@
   "TITLE_SONGS": "Canciones",
   "TITLE": "Título",
   "YEAR": "Año",
+  "VALIDATOR_TITLE": "El título es obligatorio.",
+  "VALIDATOR_ARTIST": "Se requiere al menos un artista.",
+  "VALIDATOR_GENRE": "Se requiere al menos un género.",
+  "VALIDATOR_YEAR": {
+    "REQUIRED": "El año es obligatorio.",
+    "MIN": "El año no puede ser menor a 0.",
+    "MAX": "El año no puede ser mayor al año actual."
+  },
+  "VALIDATOR_RATING": {
+    "REQUIRED": "La calificación es obligatoria.",
+    "MIN": "La calificación no puede ser menor a 0.",
+    "MAX": "La calificación no puede ser mayor a 10."
+  },
+  "VALIDATOR_DURATION": {
+    "REQUIRED": "La duración es obligatoria.",
+    "MIN": "La duración no puede ser menor a 0.",
+    "MAX": "La duración no puede ser mayor a 1000."
+  },
+  "VALIDATOR_COUNTRY": "El país es obligatorio.",
+  "VALIDATOR_POSTER": "El póster es obligatorio.",
   "COUNTRIES": {
     "Afganistán": "Afganistán",
     "Albania": "Albania",
