Feature: Refactorización y Mejoras en la Gestión de Canciones y Navegación
- Implementado precargado de artistas y géneros en el formulario de edición de canciones.
- Corregido el manejo de validación de artistas y géneros para mostrar mensajes de error apropiados.
- Ajustes en la plantilla HTML para mostrar correctamente los artistas y géneros precargados.
- Mejorado el flujo de navegación en dispositivos móviles y tablets para ocultar la barra lateral y mostrar la flecha de retorno en rutas hijas.
- Solucionado errores de JavaScript relacionados con la carga inicial de valores en el formulario de edición.
- Añadida lógica para actualizar dinámicamente el título de la página según la ruta actual.
- Refactorización del servicio de rutas para optimizar la detección de rutas principales y actualización de estados.
- Realizadas pruebas exhaustivas para asegurar la funcionalidad y fiabilidad de los cambios.

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,6 +17,8 @@
   "EDIT_BUTTON": "Editar canción",
   "EDIT": "Editar",
   "EDITING_SONG": "Editando canción",
+  "NEW_SONG_SHORT": "Nueva canción",
+  "EDITING": "Editando",
   "ENTER_IMAGE_URL": "Introduce el link de la imagen",
   "ENTER_RATING": "Indique la puntuación",
   "ENTER_SONG_TITLE": "Indique el título de la canción",
