--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,7 @@
   "ARTIST_REQUIRED": "El artista es obligatorio",
   "ARTIST": "Artistas",
   "BACK_BUTTON": "Volver",
+  "CLOSE": "Cerrar",
   "CANCEL": "Cancelar",
   "COMING_SOON": "¡Muy pronto!",
   "COMPANY_REQUIRED": "La compañía es requerida",
